[package]
name = "tower-server"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "High-level hyper server interfacing with tower"
repository = "https://github.com/audunhalland/tower-server"
keywords = ["tower", "hyper", "http", "server", "rustls"]
authors = ["Audun Halland <audun.halland@pm.me>"]

[lib]
doctest = false

[features]
url = ["dep:url"]

[dependencies]
anyhow = "1"
futures-util = "0.3"
http = "1"
http-body = "1"
hyper = { version = "1", default-features = false }
hyper-util = { version = "0.1", features = ["tokio", "server", "http1", "http2"] }
pin-utils = "0.1"
rustls = "0.23"
tokio = { version = "1", features = ["macros", "sync"] }
tokio-rustls = "0.26"
tokio-util = { version = "0.7", default-features = false }
tower-service = "0.3"
tracing = "0.1"
url = { version = "2", features = ["serde"], optional = true }

[dev-dependencies]
axum = "0.7"
