[package]
name = "tower-server"
version = "0.2.3"
edition = "2021"
license = "MIT"
description = "High-level hyper server interfacing with tower"
repository = "https://github.com/audunhalland/tower-server"
keywords = ["tower", "hyper", "http", "server", "rustls"]
authors = ["Audun Halland <audun.halland@pm.me>"]

[features]
signal = ["tokio/signal"]
url = ["dep:url"]
unstable = []

[dependencies]
anyhow = "1"
arc-swap = "1.7"
futures-util = "0.3"
http = "1"
http-body = "1"
hyper = { version = "1", default-features = false }
hyper-util = { version = "0.1", features = ["tokio", "server", "http1", "http2"] }
pin-utils = "0.1"
rustls = "0.23"
tokio = { version = "1", features = ["macros", "sync"] }
tokio-rustls = "0.26"
tokio-util = { version = "0.7", default-features = false }
tower-service = "0.3"
tracing = "0.1"
url = { version = "2", features = ["serde"], optional = true }

[dev-dependencies]
axum = "0.8"
rustls-pki-types = "1"

[package.metadata.docs.rs]
features = [
    "signal",
    "url",
    "unstable",
]
